# rhime-co2-inversions

./: .gitignore  README.md  pyproject.toml  pytest.ini
examples/: example_run_rhime_202101.py
rhime_inversions/: __init__.py  array_ops.py  calculate_basis_functions.py  convert.py  data_checks.py  data_preprocessing.py  get_co2_data.py  input_defns.py  inversion_mcmc.py  inversion_setup.py  logging_utils.py  model_error_methods.py  postprocessing_output.py  rhime_co2.py  sensitivity.py  utils.py
tests/: helpers.py  regenerate_frozen_basis_wrapper.py  test_rhime_inversions.py
