[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rhime-co2-inversions"
version = "0.1.0"
description = "Regional Hierarchical Inverse Modelling Environment for CO2"
authors = [
    {name = "Eric Saboya", email = "eric.saboya@bristol.ac.uk"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "dask",
    "pymc>=5.0",
    "arviz",
    "pytensor",
    "scipy",
    "openghg",
    "ruff>=0.14.14",
    "openghg-defs>=0.0.3",
    "openghg-inversions>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rhime_inversions*"]

[tool.black]
line-length = 110
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 110
target-version = "py39"
